--- a/guestbook/guestbook-secret.yaml
+++ b/guestbook/guestbook-secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: guestbook-ui
 type: Opaque
 data:
-  GITHUB_TOKEN: bm90LWEtcmVhbC10b2tlbi1pZi1hbnlib2R5LWRlY29kZXMtdGhpcw==
+  GITHUB_API_TOKEN: bm90LWEtcmVhbC10b2tlbi1pZi1hbnlib2R5LWRlY29kZXMtdGhpcw==
