--- a/argo/workflows/templates/standard-pods.yaml
+++ b/argo/workflows/templates/standard-pods.yaml
@@ -8,6 +8,10 @@ metadata:
     product: engineering-productivity
     project: argo
 spec:
+  arguments:
+    parameters:
+      - name: application-name
+      - name: revision
   entrypoint: main
   templates:
   - name: echo
@@ -25,6 +29,12 @@ spec:
         template: echo
       - name: pod26
         dependencies: [buddy]
+        arguments:
+          parameters:
+            - name: application-name
+              value: {{ workflow.parameters.application-name }}
+            - name: revision
+              value: {{ workflow.parameters.revision }}
         templateRef:
           name: argocd-sync-and-wait
           template: argocd-sync-and-wait
