--- a/argo/workflows/templates/standard-pods.yaml
+++ b/argo/workflows/templates/standard-pods.yaml
@@ -47,7 +47,7 @@ spec:
       - name: pod25
         dependencies: [pod26]
         template: echo
-      - name: continue?
+      - name: continue
         dependencies: [pod15, pod17, pod25]
         activeDeadlineSeconds: 120
         suspend: {}
