feat: complete migration to rollouts

--- a/guestbook/guestbook-ui-rollout.yaml
+++ b/guestbook/guestbook-ui-rollout.yaml
@@ -2,33 +2,13 @@ apiVersion: argoproj.io/v1alpha1               # Create a rollout resource
 kind: Rollout
 metadata:
   name: guestbook-ui-rollout
-spec:
-  replicas: 5
-  selector:
-    matchLabels:
-      app: guestbook-ui
-  workloadRef:                                 # Reference an existing Deployment using workloadRef field
-    apiVersion: apps/v1
-    kind: Deployment
-    name: guestbook-ui
-    scaleDown: onsuccess
-  strategy:
-    canary:
-      steps:
-        - setWeight: 20
-        - pause: {duration: 10s}
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: guestbook-ui
   labels:
     product: engineering-productivity
     team: deploy-platform
     project: guestbook
 spec:
   replicas: 2
-  revisionHistoryLimit: 3
+  revisionHistoryLimit: 1
   selector:
     matchLabels:
       app: guestbook-ui
@@ -51,3 +31,7 @@ spec:
                 name: guestbook-ui
             - secretRef:
                 name: guestbook-ui
+  strategy:
+    blueGreen:
+      activeService: guestbook-ui
+      previewService: guestbook-ui-preview
