--- a/guestbook/guestbook-ui-svc.yaml
+++ b/guestbook/guestbook-ui-svc.yaml
@@ -12,3 +12,19 @@ spec:
       targetPort: 80
   selector:
     app: guestbook-ui
+    role: active
+---
+kind: Service
+metadata:
+  name: guestbook-ui-preview
+  labels:
+    product: engineering-productivity
+    team: deploy-platform
+    project: guestbook
+spec:
+  ports:
+    - port: 80
+      targetPort: 80
+  selector:
+    app: guestbook-ui
+    role: preview
