feat: some dumb feature

--- a/argo/workflows/templates/pod.yml
+++ b/argo/workflows/templates/pod.yml
@@ -33,6 +33,8 @@ spec:
         # We would likely build a custom image rather than a gnarly bash script so it can be tested and maintained more easily
         # This is just a placeholder to demonstrate the concept
 
+        echo "Some dumb new feature here"
+
         echo "⏱️ Creating GitHub Deployment for {{inputs.parameters.application}} revision {{inputs.parameters.revision}}..."
         sleep 1
         echo "✅ GitHub Deployment created."
